# SimpGridView

./: README.md  build.gradle
adapterlibrary/: build.gradle  proguard-rules.pro
app/: build.gradle  tinker-support.gradle
app/src/androidTest/java/com/xiaozhanxiang/simplegridview/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/xiaozhanxiang/simplegridview/aidl/: Book.aidl  Book.java  BookManager.aidl  IOnNewBookArrivedListener.aidl
app/src/main/assets/: index.html
app/src/main/cpp/: CMakeLists.txt  CallTest.cpp  CallTest.h  android_debug.h  externtest.c  musicplay.cpp  musicplay.h  native.c  test.cpp  test.h  testnative.c
app/src/main/java/com/xiaozhanxiang/simplegridview/adapter/: CustomLayoutManagerAdapter.java  DragDropRecyclerViewAdapter.java  MainAdapter.java  RecyclerVeiwAdapter.java  TestLayoutManagerAdapter.java
app/src/main/java/com/xiaozhanxiang/simplegridview/app/: SampleApplication.java  SampleApplicationLike.java
app/src/main/java/com/xiaozhanxiang/simplegridview/bean/: DragDropRecyclerBean.java  RecyclerVeiwListBean.java  ReflexBean.java  ReflexSuperBean.java  TestSerializable.java
app/src/main/java/com/xiaozhanxiang/simplegridview/callback/: DragDropItemTouchHelperCallback.java  PermissionResultListener.java
app/src/main/java/com/xiaozhanxiang/simplegridview/service/: BookManagerService.java  MediaPlayerService.java
app/src/main/java/com/xiaozhanxiang/simplegridview/ui/: AudioActivity.java  AutoCompleteTextViewActivity.java  BaseActivity.java  CoordinatorLayoutActivity.java  CustomLayoutManagerActivity.java  DragDropRecyclerViewActivity.java  FlowLayoutViewActivity.java  ForegroundServiceActivity.java  JINActivity.java  LayoutManagerActivity.java  MainActivity.java  MaxMinLayoutActivity.java  RecyclerVeiwActivtiy.java  RemoteProcessActivity.java  ShareTransitionActivity.java  SlideBarActivity.java  SnapHelperActivity.java  TestActivity.java  TestLayoutManagerActivity.java  TransitionActivity.java  ViodeTestActivity.java
app/src/main/java/com/xiaozhanxiang/simplegridview/utils/: BuglyFileProvider.java  DateUtils.java  JNIUtils.java  MusicPlay.java  MyGildeModule.java  PaintUtils.java  ReflexUtils.java  Utils.java
app/src/main/java/com/xiaozhanxiang/simplegridview/view/: BaseListViewLayout.java  CustomLayoutManager.java  FlowLayoutView.java  InAdapter.java  InViewHodler.java  InvariantImageView.java  LayoutTest.java  MaxHeightFrameLayout.java  (+6 more)
app/src/main/jni/: com_xiaozhanxiang_simplegridview_utils_JNIUtils.h
app/src/main/res/drawable/: selector_tag.xml
app/src/main/res/layout/: activity_audio.xml  activity_auto_complete_text_view.xml  activity_coordinatorlayout.xml  activity_custom_layout_manager.xml  activity_flow_layout_view.xml  activity_foreground_service.xml  activity_jin.xml  activity_layout_manager.xml  activity_main.xml  activity_max_min_layout.xml  activity_recycler.xml  activity_remote_process.xml  activity_share_transition.xml  activity_slidbar.xml  activity_snap_helper.xml  activity_test.xml  activity_test_layout_manager.xml  activity_transition.xml  activity_viode_test.xml  activity_web_view.xml  item_list_custom.xml  item_list_drag_drop.xml  item_list_image.xml  item_list_main.xml  item_list_max_min_layout.xml  item_list_recycler.xml  item_list_test_layout_manager.xml  item_list_text.xml
app/src/main/res/layout-v21/: activity_share_transition.xml
app/src/main/res/values/: attr.xml  colors.xml  strings.xml  styles.xml
app/src/test/java/com/xiaozhanxiang/simplegridview/: ArraySortTest.java  ExampleUnitTest.java  SolutionTest.java
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
